--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,48 +1,83 @@
-name: Playwright Tests
+name: Comment Playwright Snapshots in PR
+
 on:
-  push:
-    branches: [main]
   pull_request:
-    branches: [main]
+    types: [opened, synchronize]
+
 jobs:
-  playwright:
-    timeout-minutes: 60
+  comment-snapshots:
     runs-on: ubuntu-latest
     permissions:
       contents: write
       pull-requests: write
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          node-version: lts/*
+          ref: ${{ github.head_ref }}
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "pnpm"
+
       - name: Install dependencies
-        run: npm install -g pnpm && pnpm install
-      - name: Install Playwright Browsers
+        run: pnpm install
+
+      - name: Install Playwright browsers
         run: pnpm exec playwright install --with-deps
+
       - name: Run Playwright tests
+        run: pnpm exec playwright test
+
+      - name: List snapshot images from public folder
+        id: list_images
         run: |
-          pnpm exec playwright test | tee output.log
-      - name: Check for snapshot issues and post comment
-        if: failure() # Only run if tests fail
+          if [ -d "public" ]; then
+            echo "FILES=$(ls public/*.png | xargs -n1 basename | tr '\n' ',' | sed 's/,$//')" >> $GITHUB_OUTPUT
+          else
+            echo "FILES=" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Commit snapshot images to PR branch
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add public/*.png || true
+          if git diff --cached --quiet; then
+            echo "No new screenshots to commit"
+          else
+            git commit -m "Add Playwright snapshots"
+            git push origin ${{ github.head_ref }}
+          fi
+
+      - name: Comment PR with snapshot images
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const { data: artifacts } = await github.rest.actions.listWorkflowRunArtifacts({
+            const pr = context.payload.pull_request;
+            const files = "${{ steps.list_images.outputs.FILES }}".split(',').filter(Boolean);
+
+            if (files.length === 0) {
+              console.log("No snapshots found, skipping comment.");
+              return;
+            }
+
+            const imageMarkdown = files.map(file =>
+              `![${file}](https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/public/${file})`
+            ).join('\n\n');
+
+            await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              run_id: process.env.GITHUB_RUN_ID,
+              issue_number: pr.number,
+              body: `🧪 **Playwright Snapshot Previews:**\n\n${imageMarkdown}`
             });
-            const report = artifacts.artifacts.find(a => a.name === 'playwright-report');
-            if (report) {
-              body = `Playwright tests failed. See the [Playwright report](${report.archive_download_url}) for details.`;
-            } else {
-              body = `Playwright tests failed. Playwright report artifact not found.`;
-            }
-      - name: Upload Playwright report
-        uses: actions/upload-artifact@v4
-        if: always() # Upload even if tests fail
-        with:
-          name: playwright-report
-          path: test-results/
-          retention-days: 1
