--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,14 +1,14 @@
-name: Comment Playwright Snapshots in PR
+name: Playwright Tests with Snapshot Comments
 
 on:
   pull_request:
     types: [opened, synchronize]
 
 jobs:
-  comment-snapshots:
+  playwright-tests:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: read
       pull-requests: write
 
     steps:
@@ -35,67 +35,80 @@ jobs:
         run: pnpm exec playwright install --with-deps
 
       - name: Run Playwright tests
+        continue-on-error: true
         run: pnpm exec playwright test
 
-      - name: List snapshot images from public folder
-        id: list_images
+      - name: Process test results and snapshots
+        id: process_results
         run: |
-          if [ -d "public" ]; then
-            # Get all PNG images in the public folder
-            FILES=$(ls public/*.png 2>/dev/null | xargs -n1 basename | tr '\n' ',' | sed 's/,$//')
-            echo "FILES=$FILES" >> $GITHUB_OUTPUT
-            
-            # Check specifically for fullpage.png
-            if [ -f "public/fullpage.png" ]; then
-              echo "FULLPAGE=fullpage.png" >> $GITHUB_OUTPUT
-            else
-              echo "FULLPAGE=" >> $GITHUB_OUTPUT
-            fi
+          # Check if there are any test results
+          if [ -f "test-results/results.json" ]; then
+            echo "TEST_RESULTS_EXIST=true" >> $GITHUB_OUTPUT
           else
-            echo "FILES=" >> $GITHUB_OUTPUT
-            echo "FULLPAGE=" >> $GITHUB_OUTPUT
+            echo "TEST_RESULTS_EXIST=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Commit snapshot images to PR branch
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add public/*.png || true
-          if git diff --cached --quiet; then
-            echo "No new screenshots to commit"
+          # Check for snapshot updates/differences
+          if [ -d "test-results" ]; then
+            # Count test result artifacts
+            ARTIFACT_COUNT=$(find test-results -name "*.png" -o -name "*.jpg" -o -name "*.jpeg" | wc -l)
+            echo "ARTIFACT_COUNT=$ARTIFACT_COUNT" >> $GITHUB_OUTPUT
           else
-            git commit -m "Add Playwright snapshots"
-            git push origin ${{ github.head_ref }}
+            echo "ARTIFACT_COUNT=0" >> $GITHUB_OUTPUT
           fi
 
-      - name: Comment PR with snapshot images
+          # Check for HTML report
+          if [ -f "playwright-report/index.html" ]; then
+            echo "HTML_REPORT_EXISTS=true" >> $GITHUB_OUTPUT
+          else
+            echo "HTML_REPORT_EXISTS=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Upload Playwright Test Results
+        if: steps.process_results.outputs.TEST_RESULTS_EXIST == 'true'
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-test-results-${{ github.run_id }}
+          path: |
+            test-results/
+            playwright-report/
+          retention-days: 30
+
+      - name: Upload Test Screenshots
+        if: steps.process_results.outputs.ARTIFACT_COUNT != '0'
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-screenshots-${{ github.run_id }}
+          path: test-results/**/*.png
+          retention-days: 30
+
+      - name: Comment PR with test results
+        if: steps.process_results.outputs.TEST_RESULTS_EXIST == 'true' || steps.process_results.outputs.HTML_REPORT_EXISTS == 'true'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const pr = context.payload.pull_request;
-            const files = "${{ steps.list_images.outputs.FILES }}".split(',').filter(Boolean);
-            const fullpage = "${{ steps.list_images.outputs.FULLPAGE }}";
+            const runId = context.runId;
+            const artifactCount = "${{ steps.process_results.outputs.ARTIFACT_COUNT }}";
+            const htmlReportExists = "${{ steps.process_results.outputs.HTML_REPORT_EXISTS }}" === 'true';
 
-            if (files.length === 0) {
-              console.log("No snapshots found, skipping comment.");
-              return;
+            let commentBody = '🧪 **Playwright Test Results:**\n\n';
+
+            // Add test report link
+            if (htmlReportExists) {
+              commentBody += `📊 **Test Report:** [View detailed HTML report](https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${runId})\n\n`;
             }
 
-            let commentBody = '🧪 **Playwright Snapshot Previews:**\n\n';
-
-            // Add fullpage snapshot with special formatting if it exists
-            if (fullpage) {
-              commentBody += `### Full Page Screenshot:\n![${fullpage}](https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/public/${fullpage})\n\n`;
+            // Add artifact information
+            if (parseInt(artifactCount) > 0) {
+              commentBody += `📸 **Screenshots:** ${artifactCount} screenshot(s) captured\n`;
+              commentBody += `🔗 **Download Artifacts:** [Test Results & Screenshots](https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${runId})\n\n`;
             }
 
-            // Add other snapshots (excluding fullpage if it was already added)
-            const otherFiles = fullpage ? files.filter(file => file !== fullpage) : files;
-            if (otherFiles.length > 0) {
-              commentBody += `### Other Snapshots:\n${otherFiles.map(file =>
-                `![${file}](https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/public/${file})`
-              ).join('\n\n')}`;
-            }
+            commentBody += `⚡ **Run ID:** ${runId}\n`;
+            commentBody += `🔄 **Commit:** ${pr.head.sha.substring(0, 7)}\n\n`;
+            commentBody += '> Snapshots are automatically compared using Playwright\'s built-in visual regression testing. Check the artifacts above for detailed results.';
 
             await github.rest.issues.createComment({
               owner: context.repo.owner,
