--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -37,34 +37,34 @@ jobs:
       - name: Run Playwright tests
         run: pnpm exec playwright test
 
-      # - name: List snapshot images from public folder
-      #   id: list_images
-      #   run: |
-      #     if [ -d "public" ]; then
-      #       FILES=$(ls public/*.png | xargs -n1 basename | tr '\n' ',' | sed 's/,$//')
-      #       echo "FILES=$FILES" >> $GITHUB_OUTPUT
-      #       # Extract fullpage.png specifically
-      #       if [[ "$FILES" == *"fullpage.png"* ]]; then
-      #         echo "FULLPAGE=fullpage.png" >> $GITHUB_OUTPUT
-      #       else
-      #         echo "FULLPAGE=" >> $GITHUB_OUTPUT
-      #       fi
-      #     else
-      #       echo "FILES=" >> $GITHUB_OUTPUT
-      #       echo "FULLPAGE=" >> $GITHUB_OUTPUT
-      #     fi
+      - name: List snapshot images from public folder
+        id: list_images
+        run: |
+          if [ -d "public" ]; then
+            FILES=$(ls public/*.png | xargs -n1 basename | tr '\n' ',' | sed 's/,$//')
+            echo "FILES=$FILES" >> $GITHUB_OUTPUT
+            # Extract fullpage.png specifically
+            if [[ "$FILES" == *"fullpage.png"* ]]; then
+              echo "FULLPAGE=fullpage.png" >> $GITHUB_OUTPUT
+            else
+              echo "FULLPAGE=" >> $GITHUB_OUTPUT
+            fi
+          else
+            echo "FILES=" >> $GITHUB_OUTPUT
+            echo "FULLPAGE=" >> $GITHUB_OUTPUT
+          fi
 
-      # - name: Commit snapshot images to PR branch
-      #   run: |
-      #     git config user.name "github-actions[bot]"
-      #     git config user.email "github-actions[bot]@users.noreply.github.com"
-      #     git add public/*.png || true
-      #     if git diff --cached --quiet; then
-      #       echo "No new screenshots to commit"
-      #     else
-      #       git commit -m "Add Playwright snapshots"
-      #       git push origin ${{ github.head_ref }}
-      #     fi
+      - name: Commit snapshot images to PR branch
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add public/*.png || true
+          if git diff --cached --quiet; then
+            echo "No new screenshots to commit"
+          else
+            git commit -m "Add Playwright snapshots"
+            git push origin ${{ github.head_ref }}
+          fi
 
       - name: Comment PR with snapshot images
         uses: actions/github-script@v7
@@ -72,8 +72,16 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const pr = context.payload.pull_request;
+            const files = "${{ steps.list_images.outputs.FILES }}".split(',').filter(Boolean);
 
-            const imageMarkdown = `![Screenshot](https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/public/fullpage.png)`
+            if (files.length === 0) {
+              console.log("No snapshots found, skipping comment.");
+              return;
+            }
+
+            const imageMarkdown = files.map(file =>
+              `![${file}](https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/public/${file})`
+            ).join('\n\n');
 
             await github.rest.issues.createComment({
               owner: context.repo.owner,
